# c-playground

./: CMakeLists.txt  README.md
include/: util.h
posix-shared-memory/: README.md  common.h  test_reader.c  test_writer.c
shared-memory/: CMakeLists.txt  Makefile  README  README.md  common.h  test.sh  test_reader.c  test_writer.c
